# Cybersecurity

hash-cracker/: CMakePresets.json  Justfile  README.md  install.sh
hash-cracker/src/attack/: BruteForceAttack.cpp  BruteForceAttack.hpp  RuleAttack.hpp
hash-cracker/src/config/: Config.hpp
hash-cracker/src/core/: Concepts.hpp
hash-cracker/src/hash/: HashDetector.hpp
hash-cracker/src/rules/: RuleSet.hpp
hash-cracker/src/threading/: ThreadPool.cpp
hash-cracker/tests/: test_bruteforce_attack.cpp  test_dictionary_attack.cpp  test_engine.cpp
hash-cracker/tests/data/: small_wordlist.txt
keylogger/: pyproject.toml
network-traffic-analyzer/cpp/: Justfile  README.md
network-traffic-analyzer/cpp/learn/: 00-OVERVIEW.md  01-CONCEPTS.md  02-ARCHITECTURE.md  03-IMPLEMENTATION.md  04-CHALLENGES.md
network-traffic-analyzer/python/tests/: test_filters.py  test_models.py
simple-port-scanner/: main.cpp
simple-port-scanner/learn/: 00-OVERVIEW.md  01-CONCEPTS.md  02-ARCHITECTURE.md  03-IMPLEMENTATION.md  04-CHALLENGES.md
simple-port-scanner/src/: PortScanner.cpp  PortScanner.hpp
simple-vulnerability-scanner/: Justfile  README.md  go.mod  go.sum
simple-vulnerability-scanner/cmd/angela/: main.go
simple-vulnerability-scanner/internal/cli/: output.go  update.go
simple-vulnerability-scanner/internal/config/: config.go
simple-vulnerability-scanner/learn/: 00-OVERVIEW.md  01-CONCEPTS.md  02-ARCHITECTURE.md  03-IMPLEMENTATION.md  04-CHALLENGES.md
simple-vulnerability-scanner/testdata/: pyproject.toml  requirements.txt
(+40 files in other folders)
